# agent-team

./: .gitignore  .gitlint  AI_DEV_KIT_SETUP.md  COMMIT_RULES.md  README.md  flake.nix  main.py  pyproject.toml
agents/: coder.py  filesystem.py  fixer.py  orchestrator.py  planner.py  researcher.py  reviewer.py  tools.py  worker.py
cli/: __init__.py  app.py  main.py
graph/: workflow.py
prompts/: coder.txt  planner.txt  reviewer.txt
tests/: conftest.py  test_agent_events.py  test_cli.py  test_coder.py  test_context.py  test_filesystem.py  test_fixer.py  test_llm.py  test_main.py  test_memory.py  test_orchestrator.py  test_planner.py  test_researcher.py  test_reviewer.py  test_sessions.py  test_snapshots.py  test_tools.py  test_worker.py  test_workflow.py
utils/: agent_events.py  context.py  continuation.py  llm.py  memory.py  sessions.py  snapshots.py
